Fix header errors showing behind columns.

--- a/kanmail/client/styles/header.less
+++ b/kanmail/client/styles/header.less
@@ -25,6 +25,7 @@ header {
     div.header-errors {
         text-align: right;
         position: absolute;
+        z-index: 99999;
         top: 0;
         right: 0;
 
